core/roboconf-core/src/test/resources/configurations/valid/commented-facet-3.graph
##############################
# Several facet definitions
##############################

# 'Deployable' is an abstract facet
facet deployable {
	# nothing
}

# Tomcat
facet tomcat {
	exports: ip, port = 8080;	# port has a default value
	children: war;
	extends: deployable;
}	# end

# Apache
facet apache {
	exports: ip, port = 80;
	extends: deployable;
}

# Database
facet db {
	exports: ip, port = 8080;
	extends: deployable;
}
