core/roboconf-core/src/test/resources/configurations/invalid/component-with-quoted-values.graph

facet A {
	# nothing
}

component  {
	installer: "target";
	children: "toto";
	exports: ip, path = "this is a valid property value!";
	facets: "A";
}

toto {
	installer : whatver;
	extends: "component";
}
